--- a/doc/documentation.tex
+++ b/doc/documentation.tex
@@ -11,6 +11,7 @@
 \usepackage{float}
 \usepackage{hyperref}
 \usepackage{listings}
+\usepackage[normalem]{ulem}
 \usepackage{siunitx}
 \usepackage{svg}
 \usepackage{titlesec}
@@ -84,11 +85,11 @@ The test-suite supports different devices (e.g. power supplies, ethernet clients
 	\begin{itemize}
 \item Power-supply
 \item Labjack
-\item RF (Reception client for the Analog Devices IIO-daemon)
-\item DIO (Digital I/O to switch relays)\footnote{Not implemented yet}
-\item PROG (Starts and external program including arguments; and records the output)
-\item ETH (Ethernet data reception)
-\item SEQ (Sequencer to send signals on a timetable)
+\item \sout{RF (Reception client for the Analog Devices IIO-daemon)}
+\item \sout{DIO (Digital I/O to switch relays)}\footnote{Not implemented yet}
+\item \sout{PROG (Starts and external program including arguments; and records the output)}
+\item \sout{ETH (Ethernet data reception)}
+\item \sout{SEQ (Sequencer to send signals on a timetable)}
 	\end{itemize}		
 	
 	\subsection{Testrun}	
@@ -192,7 +193,7 @@ EndSection
 	\end{figure}
 	
 	\subsubsection{Config Creation}	
-	The LabJack is denoted in the configuration file in the \enquote{LBJ} section. First the name is defined and after that the number of channels as a validity check. The individual channels are written with a prefix $c$, a number $X$ and their features as suffix:
+	The LabJack is denoted in the configuration file in the \enquote{LBJ} section. First the name is defined and after that the connection. The connection consisits of two parts, the connection type and the ID. The connection type can be either defined as USB (1) oder Ethernet (3). Depending on that follows the ID. In case of the ethernet connection type, the ID is the IP address of the device. After the main configuration follows the number of channels as a validity check. The individual channels are written with a prefix $c$, a number $X$ and their features as suffix:
 	
 	\begin{itemize}
 	\item $n$: Name
@@ -206,6 +207,8 @@ EndSection
 \begin{lstlisting}[caption=LBJ Config]
 Section LBJ
 	name=Rotes T7
+	con=3
+	id=192.168.0.12
 	channel=2
 	c0n=AIN62/68
 	c0pc=62
@@ -236,213 +239,213 @@ EndSection
 		\end{tabular}			
 		\end{table}	
 
-	\newpage
-	\subsection{RF Signals}	
-	In order to verify RF signals, the RF tab (see figure \ref{f:rf_example}) can be used. The current implementation supports only sine signals and requires IQ data with 16 bit per sample. An evaluation margin in exponents of 2 (e.g. $2^x$)\footnote{A first good guess is $2^5$} can be chosen as an upper / lower boundary. The evaluation will only start if the specific box is checked. Once the set boundary is crossed (and the evaluation is active) an error signal will be emitted.
-		
-		\begin{figure}[H]
-\centering
-\includegraphics[width=0.9\textwidth]{./6_RF_example.png}
-\caption{An active RF testrun in the suite}
-\label{f:rf_example}
-		\end{figure}
-	
-		\subsubsection{Manual Creation}
-		For the manual creation, refer to figure (\ref{f:rf_menu}). In the first row an individual name can be chosen. The second row contains the IPv4 address including the port number. In the third row the number of channels is specified.		
-		
-		\begin{figure}[H]
-\centering
-\includegraphics[width=0.4\textwidth]{./6_RF_menu.png}
-\caption{RF creation menu}
-\label{f:rf_menu}
-		\end{figure}
-			
-		\subsubsection{Config Creation}
-				
-		The RF is denoted in the configuration file in the \enquote{RF} section. First the name is defined, then the IPv4 address of the device and after that the number of channels. The individual channels are written with a prefix $c$, a number $X$ and their features as suffix:
-	
-	\begin{itemize}
-	\item $m$: margin
-	\end{itemize}
-	
-\begin{lstlisting}[caption=RF Config]
-Section RF
-	name=DUT - AD9361
-	address=192.168.3.2:9001
-	channel=2
-	c0m=0
-	c1m=0
-	signal=
-EndSection
-\end{lstlisting}
-	
-		\subsubsection{Data Reception}
-		The current implementation uses the simple \textit{ncat}\footnote{Refer to \url{de.wikipedia.org/wiki/Netcat}} command to receive raw data over Ethernet. This makes it rather independent. The current data protocol (e.g. with two channel) is given in table (\ref{t:rf_data}):
-		
-		\begin{table}[H]
-		\centering
-		\begin{tabular}{c|cc|cc|cc|cc}
-		\toprule
-		2 Channel	& \multicolumn{8}{c}{8 Byte}\\ \midrule
-		IQ-Data		& \multicolumn{4}{c|}{4 Byte} & \multicolumn{4}{c}{4 Byte} \\ \hline 
-		I	& \multicolumn{2}{c}{2 Byte} & \multicolumn{2}{c|}{} & \multicolumn{2}{c}{2 Byte} & \multicolumn{2}{c}{} \\ 
-		Q	& \multicolumn{2}{c}{} & \multicolumn{2}{c|}{2 Byte} & \multicolumn{2}{c}{} & \multicolumn{2}{c}{2 Byte} \\  \hline
-		Byte		& LSB & MSB & LSB & MSB & LSB & MSB & LSB & MSB \\ \bottomrule
-		\end{tabular}
-		\caption{Data structure of the RF IQ-data}
-		\label{t:rf_data}
-		\end{table}
-		
-	\newpage
-	
-	\subsection{Programm}
-	To communicate with the DUT in an individual way (or to initialize it), a specified program can be started. This is done in the program tab (see figure \ref{f:prog_example}). Here, the path to a program - one wants to use - can be put in. It can then be either started early manually (and logged) or via the trigger mechanism, together with the rest of the test. So far, only console applications are supported.
-	
-	Additional to the program, arguments can be added. To pass the current run directory the variable \textit{\$directory} can the be used.
-	
-	\begin{figure}[H]
-	\centering
-	\includegraphics[width=0.9\textwidth]{./7_PROG_example.png}
-	\caption{An active PROG testrun in the suite}
-	\label{f:prog_example}
-	\end{figure}
-	
-		\subsubsection{Manual Creation}	
-		For the manual creation, refer to figure (\ref{f:prog_menu}). In the first row an individual name can be chosen. The path to the program is set in the second row. 
-		
-		\begin{figure}[H]
-\centering
-\includegraphics[width=0.4\textwidth]{./7_PROG_menu.png}
-\caption{RF creation menu}
-\label{f:prog_menu}
-		\end{figure}
-			
-		\subsubsection{Config Creation}
-		The program is denoted in the configuration file in the \enquote{PROG} section. First the name is defined, then the path to the program.
-	
-\begin{lstlisting}[caption=PROG Config]
-Section PROG
-	name=Test Programm
-	path=../CRT/CRTTest
-	signal=
-EndSection
-\end{lstlisting}
-	
-	\newpage
-	\subsection{Ethernet}
-	The Ethernet can specify a port to be open for data reception. The name, port number and information on the reception are displayed. In figure \eqref{f:eth_example} an example is given. Once the test starts, the port is opened and data can be received. A timeout can be set to trigger other devices (added via \enquote{Add Signal}). On the right an indicator shows if the connection is (in-)active and lights up if data has been recently received. 
-	
-	\begin{figure}[H]
-\centering
-\includegraphics[width=0.9\textwidth]{./8_ETH_example.png}
-\caption{Reception of temperature data files}
-\label{f:eth_example}
-	\end{figure}	 
-	
-	\subsubsection{Manual Creation}	
-	\label{c:eth_manual_creation}
-	
-	The window for manual creation is presented in figure \eqref{f:eth_menu}. In the first row an individual (meaningful) name can be chosen. This is also the folder where the received files are stored later! In the second row the port number is given. At last an arbitrary timeout (in milliseconds) can be specified.
-	
-	\begin{figure}[H]
-	\centering
-	\includegraphics[width=0.4\textwidth]{./8_ETH_menu.png}
-	\caption{Creation menu for a Ethernet reception}
-	\label{f:eth_menu}
-	\end{figure}
-	
-	\subsubsection{Config Creation}
-	
-	The Ethernet is denoted in the configuration file in the \enquote{ETH} section. All three lines correspond to the manual creation in chapter \ref{c:eth_manual_creation}. 
-	
-\begin{lstlisting}[caption=ETH Config]
-Section ETH
-	name=Temperature Data
-	port=9010
-	timeout=9999
-	signal=
-EndSection
-\end{lstlisting}
-	
-	\newpage
-	\subsection{Sequence}
-	The sequence carries an arbitrary amount of tasks / signals to execute (see figure \ref{f:seq_example}. After every signal, a timeslot is presented showing specifying the waiting time after the signal has been send. One can set the signals to be send by hitting the \enquote{Set Signal} Button. Additionally to the normal available signals, a \enquote{sleep} signal is added in the menu. In the top row, the checkbox \enquote{loop} can be set to run the sequence infinitely.
-	
-	\begin{figure}[H]
-\centering
-\includegraphics[width=0.9\textwidth]{./9_SEQ_example.png}
-\caption{Sequence for a power cycle}
-\label{f:seq_example}
-	\end{figure}	 
-	
-	\subsubsection{Manual Creation}	
-	\label{c:seq_manual_creation}
-	
-	The window for manual creation is presented in figure \eqref{f:seq_menu}. In the first row an individual name can be chosen. In the second row the number of tasks can be set.
-	
-	\begin{figure}[H]
-	\centering
-	\includegraphics[width=0.4\textwidth]{./9_SEQ_menu.png}
-	\caption{Creation menu for a sequence}
-	\label{f:seq_menu}
-	\end{figure}
-	
-	\subsubsection{Config Creation}
-	
-	The sequencer is denoted in the configuration file in the \enquote{SEQ} section. The first two lines correspond to the manual creation in chapter \ref{c:seq_manual_creation}. After that, the individual tasks are specified with a prefix $t$, a number $X$ and their waiting time $t$ as well as the signal $s$ as suffix.
-	
-\begin{lstlisting}[caption=SEQ Config]
-Section SEQ
-name=Powercycle
-tasks=4
-t0t=1
-t0s=PSU Links Switch On
-t1t=1
-t1s=PSU Links Switch Off
-signal=
-EndSection
-\end{lstlisting}
-
-\newpage
-	
-	\subsection{Fieldfox}
-	Fieldfox is a multi-tool for RF network and spectrum analysis. In the GUI only the Spectrum Analyser mode is supported so far (see figure \ref{f:fox_example}).
-	
-	\begin{figure}[H]
-	\centering
-	\includegraphics[width=0.9\textwidth]{./10_FOX_example.png}
-	\caption{An example with a Fieldfox in Spectrum Analyser mode}
-	\label{f:fox_example}
-	\end{figure}
-	
-	\subsubsection{Manual Creation}	
-	
-	The window for manual creation is presented in figure (\ref{f:fox_menu}). In the first row an individual name can be chosen. In the second one an IPv4 address and the respective port have to be put in. After that, the start and stop frequency are chosen and a number of measurement points is set. The possibility of choosing a operation mode is not implemented yet.
-	
-	\begin{figure}[H]
-	\centering
-	\includegraphics[width=0.4\textwidth]{./10_FOX_menu.png}
-	\caption{Creation menu for a Fieldfox}
-	\label{f:fox_menu}
-	\end{figure}
-	
-	\subsubsection{Config Creation}	
-	The Fieldfox is denoted in the configuration file in the \enquote{FOX} section. First again the name is denoted and in the second line the address. The mode is not implemented yet. After that start and stop frequency are given and the number of measurement points.
-	
-\begin{lstlisting}[caption=FOX Config]
-Section FOX
-name=Fieldfox N
-address=192.168.3.141:5025
-mode=Unused
-start_freq=2400991500
-stop_freq=2401011500
-points=1001
-signal=
-EndSection
-\end{lstlisting}
-	
-		\subsubsection{Supported devices}
-		So far only one device (N9917A) has been programmed and tested. But as the SCPI are common in between different models, a easy portability should be possible.
+%	\newpage
+%	\subsection{RF Signals}	
+%	In order to verify RF signals, the RF tab (see figure \ref{f:rf_example}) can be used. The current implementation supports only sine signals and requires IQ data with 16 bit per sample. An evaluation margin in exponents of 2 (e.g. $2^x$)\footnote{A first good guess is $2^5$} can be chosen as an upper / lower boundary. The evaluation will only start if the specific box is checked. Once the set boundary is crossed (and the evaluation is active) an error signal will be emitted.
+%		
+%		\begin{figure}[H]
+%\centering
+%\includegraphics[width=0.9\textwidth]{./6_RF_example.png}
+%\caption{An active RF testrun in the suite}
+%\label{f:rf_example}
+%		\end{figure}
+%	
+%		\subsubsection{Manual Creation}
+%		For the manual creation, refer to figure (\ref{f:rf_menu}). In the first row an individual name can be chosen. The second row contains the IPv4 address including the port number. In the third row the number of channels is specified.		
+%		
+%		\begin{figure}[H]
+%\centering
+%\includegraphics[width=0.4\textwidth]{./6_RF_menu.png}
+%\caption{RF creation menu}
+%\label{f:rf_menu}
+%		\end{figure}
+%			
+%		\subsubsection{Config Creation}
+%				
+%		The RF is denoted in the configuration file in the \enquote{RF} section. First the name is defined, then the IPv4 address of the device and after that the number of channels. The individual channels are written with a prefix $c$, a number $X$ and their features as suffix:
+%	
+%	\begin{itemize}
+%	\item $m$: margin
+%	\end{itemize}
+%	
+%\begin{lstlisting}[caption=RF Config]
+%Section RF
+%	name=DUT - AD9361
+%	address=192.168.3.2:9001
+%	channel=2
+%	c0m=0
+%	c1m=0
+%	signal=
+%EndSection
+%\end{lstlisting}
+%	
+%		\subsubsection{Data Reception}
+%		The current implementation uses the simple \textit{ncat}\footnote{Refer to \url{de.wikipedia.org/wiki/Netcat}} command to receive raw data over Ethernet. This makes it rather independent. The current data protocol (e.g. with two channel) is given in table (\ref{t:rf_data}):
+%		
+%		\begin{table}[H]
+%		\centering
+%		\begin{tabular}{c|cc|cc|cc|cc}
+%		\toprule
+%		2 Channel	& \multicolumn{8}{c}{8 Byte}\\ \midrule
+%		IQ-Data		& \multicolumn{4}{c|}{4 Byte} & \multicolumn{4}{c}{4 Byte} \\ \hline 
+%		I	& \multicolumn{2}{c}{2 Byte} & \multicolumn{2}{c|}{} & \multicolumn{2}{c}{2 Byte} & \multicolumn{2}{c}{} \\ 
+%		Q	& \multicolumn{2}{c}{} & \multicolumn{2}{c|}{2 Byte} & \multicolumn{2}{c}{} & \multicolumn{2}{c}{2 Byte} \\  \hline
+%		Byte		& LSB & MSB & LSB & MSB & LSB & MSB & LSB & MSB \\ \bottomrule
+%		\end{tabular}
+%		\caption{Data structure of the RF IQ-data}
+%		\label{t:rf_data}
+%		\end{table}
+%		
+%	\newpage
+%	
+%	\subsection{Programm}
+%	To communicate with the DUT in an individual way (or to initialize it), a specified program can be started. This is done in the program tab (see figure \ref{f:prog_example}). Here, the path to a program - one wants to use - can be put in. It can then be either started early manually (and logged) or via the trigger mechanism, together with the rest of the test. So far, only console applications are supported.
+%	
+%	Additional to the program, arguments can be added. To pass the current run directory the variable \textit{\$directory} can the be used.
+%	
+%	\begin{figure}[H]
+%	\centering
+%	\includegraphics[width=0.9\textwidth]{./7_PROG_example.png}
+%	\caption{An active PROG testrun in the suite}
+%	\label{f:prog_example}
+%	\end{figure}
+%	
+%		\subsubsection{Manual Creation}	
+%		For the manual creation, refer to figure (\ref{f:prog_menu}). In the first row an individual name can be chosen. The path to the program is set in the second row. 
+%		
+%		\begin{figure}[H]
+%\centering
+%\includegraphics[width=0.4\textwidth]{./7_PROG_menu.png}
+%\caption{RF creation menu}
+%\label{f:prog_menu}
+%		\end{figure}
+%			
+%		\subsubsection{Config Creation}
+%		The program is denoted in the configuration file in the \enquote{PROG} section. First the name is defined, then the path to the program.
+%	
+%\begin{lstlisting}[caption=PROG Config]
+%Section PROG
+%	name=Test Programm
+%	path=../CRT/CRTTest
+%	signal=
+%EndSection
+%\end{lstlisting}
+%	
+%	\newpage
+%	\subsection{Ethernet}
+%	The Ethernet can specify a port to be open for data reception. The name, port number and information on the reception are displayed. In figure \eqref{f:eth_example} an example is given. Once the test starts, the port is opened and data can be received. A timeout can be set to trigger other devices (added via \enquote{Add Signal}). On the right an indicator shows if the connection is (in-)active and lights up if data has been recently received. 
+%	
+%	\begin{figure}[H]
+%\centering
+%\includegraphics[width=0.9\textwidth]{./8_ETH_example.png}
+%\caption{Reception of temperature data files}
+%\label{f:eth_example}
+%	\end{figure}	 
+%	
+%	\subsubsection{Manual Creation}	
+%	\label{c:eth_manual_creation}
+%	
+%	The window for manual creation is presented in figure \eqref{f:eth_menu}. In the first row an individual (meaningful) name can be chosen. This is also the folder where the received files are stored later! In the second row the port number is given. At last an arbitrary timeout (in milliseconds) can be specified.
+%	
+%	\begin{figure}[H]
+%	\centering
+%	\includegraphics[width=0.4\textwidth]{./8_ETH_menu.png}
+%	\caption{Creation menu for a Ethernet reception}
+%	\label{f:eth_menu}
+%	\end{figure}
+%	
+%	\subsubsection{Config Creation}
+%	
+%	The Ethernet is denoted in the configuration file in the \enquote{ETH} section. All three lines correspond to the manual creation in chapter \ref{c:eth_manual_creation}. 
+%	
+%\begin{lstlisting}[caption=ETH Config]
+%Section ETH
+%	name=Temperature Data
+%	port=9010
+%	timeout=9999
+%	signal=
+%EndSection
+%\end{lstlisting}
+%	
+%	\newpage
+%	\subsection{Sequence}
+%	The sequence carries an arbitrary amount of tasks / signals to execute (see figure \ref{f:seq_example}. After every signal, a timeslot is presented showing specifying the waiting time after the signal has been send. One can set the signals to be send by hitting the \enquote{Set Signal} Button. Additionally to the normal available signals, a \enquote{sleep} signal is added in the menu. In the top row, the checkbox \enquote{loop} can be set to run the sequence infinitely.
+%	
+%	\begin{figure}[H]
+%\centering
+%\includegraphics[width=0.9\textwidth]{./9_SEQ_example.png}
+%\caption{Sequence for a power cycle}
+%\label{f:seq_example}
+%	\end{figure}	 
+%	
+%	\subsubsection{Manual Creation}	
+%	\label{c:seq_manual_creation}
+%	
+%	The window for manual creation is presented in figure \eqref{f:seq_menu}. In the first row an individual name can be chosen. In the second row the number of tasks can be set.
+%	
+%	\begin{figure}[H]
+%	\centering
+%	\includegraphics[width=0.4\textwidth]{./9_SEQ_menu.png}
+%	\caption{Creation menu for a sequence}
+%	\label{f:seq_menu}
+%	\end{figure}
+%	
+%	\subsubsection{Config Creation}
+%	
+%	The sequencer is denoted in the configuration file in the \enquote{SEQ} section. The first two lines correspond to the manual creation in chapter \ref{c:seq_manual_creation}. After that, the individual tasks are specified with a prefix $t$, a number $X$ and their waiting time $t$ as well as the signal $s$ as suffix.
+%	
+%\begin{lstlisting}[caption=SEQ Config]
+%Section SEQ
+%name=Powercycle
+%tasks=4
+%t0t=1
+%t0s=PSU Links Switch On
+%t1t=1
+%t1s=PSU Links Switch Off
+%signal=
+%EndSection
+%\end{lstlisting}
+%
+%\newpage
+%	
+%	\subsection{Fieldfox}
+%	Fieldfox is a multi-tool for RF network and spectrum analysis. In the GUI only the Spectrum Analyser mode is supported so far (see figure \ref{f:fox_example}).
+%	
+%	\begin{figure}[H]
+%	\centering
+%	\includegraphics[width=0.9\textwidth]{./10_FOX_example.png}
+%	\caption{An example with a Fieldfox in Spectrum Analyser mode}
+%	\label{f:fox_example}
+%	\end{figure}
+%	
+%	\subsubsection{Manual Creation}	
+%	
+%	The window for manual creation is presented in figure (\ref{f:fox_menu}). In the first row an individual name can be chosen. In the second one an IPv4 address and the respective port have to be put in. After that, the start and stop frequency are chosen and a number of measurement points is set. The possibility of choosing a operation mode is not implemented yet.
+%	
+%	\begin{figure}[H]
+%	\centering
+%	\includegraphics[width=0.4\textwidth]{./10_FOX_menu.png}
+%	\caption{Creation menu for a Fieldfox}
+%	\label{f:fox_menu}
+%	\end{figure}
+%	
+%	\subsubsection{Config Creation}	
+%	The Fieldfox is denoted in the configuration file in the \enquote{FOX} section. First again the name is denoted and in the second line the address. The mode is not implemented yet. After that start and stop frequency are given and the number of measurement points.
+%	
+%\begin{lstlisting}[caption=FOX Config]
+%Section FOX
+%name=Fieldfox N
+%address=192.168.3.141:5025
+%mode=Unused
+%start_freq=2400991500
+%stop_freq=2401011500
+%points=1001
+%signal=
+%EndSection
+%\end{lstlisting}
+%	
+%		\subsubsection{Supported devices}
+%		So far only one device (N9917A) has been programmed and tested. But as the SCPI are common in between different models, a easy portability should be possible.
 	
 \section{Logging}
 To activate the logging, a run folder has to be chosen. Within this folder, all log files are going to be stored. 
